Fix taille scrollbar et navbutton une fois de plus

--- a/src/Components/Public/Header/Header.css
+++ b/src/Components/Public/Header/Header.css
@@ -11,8 +11,8 @@
 
 /* Button Hamburger */
 .bouton-hamburger {
-    width: 26px;
-    height: 26px;
+    width: 30px;
+    height: 30px;
     border: 0;
     background-image: url('bars-solid.svg');
     background-color: white;
